--- a/src/components/menu-item/menu-items.styles.scss
+++ b/src/components/menu-item/menu-items.styles.scss
@@ -22,7 +22,6 @@
 		}
 	}
 
-
 	&.large {
 		height: 380px;
 	}
@@ -32,7 +31,7 @@
 	}
 
 	&:last-child {
-		margin-right: 7.5px;
+		margin-left: 7.5px;
 	}
 
 	.background-image {
