--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -6,7 +6,7 @@
 	line-height: 50px;
 	padding: 0px 35px 0px 35px;
 	font-size: 15px;
-	background-color: black;
+	background-color: #686868;
 	color: white;
 	text-transform: uppercase;
 	font-family: 'Open Sans Condensed';
@@ -15,7 +15,7 @@
 	cursor: pointer;
 
 	&:hover {
-		background-color: white;
+		background-color: #A9A9A9;
 		color: black;
 		border: 1px solid black;
 	}
