--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -6,16 +6,18 @@
 	line-height: 50px;
 	padding: 0px 35px 0px 35px;
 	font-size: 15px;
-	background-color: #686868;
+	background-color: black;
 	color: white;
 	text-transform: uppercase;
 	font-family: 'Open Sans Condensed';
 	font-weight: bolder;
 	border: none;
 	cursor: pointer;
+	display: flex;
+	justify-content: center;
 
 	&:hover {
-		background-color: #A9A9A9;
+		background-color: white;
 		color: black;
 		border: 1px solid black;
 	}
@@ -26,6 +28,18 @@
 
 		&:hover {
 			background-color: #357ae8;
+			border: none;
+		}
+	}
+
+	&.inverted {
+		background-color: white;
+		color: black;
+		border: 1px solid black;
+
+		&:hover {
+			background-color: black;
+			color: white;
 			border: none;
 		}
 	}
